--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,15 @@
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/spring"
-    username: "root"
-    password: "admin1015*"
+    url: jdbc:mysql://localhost:3306/spring
+    username: root
+    password: admin1015*
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+  session:
+    store-type: redis
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
